# adaptive-claude-agents

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.ja.md  README.md  RELEASE_NOTES_v1.1.0.md  SECURITY.md  install.sh  pyproject.toml  requirements-dev.txt  uninstall.sh  update.sh
.claude/: token_metrics.jsonl
.claude/agents/: SUBAGENT_GUIDE.md  docs-writer.md  skills-developer.md  stack-analyzer.md  template-generator.md
.claude/commands/: update-subagents.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: alpha_feedback.md  bug_report.md  config.yml  feature_request.md  template_request.md
docs/: 2025_BEST_PRACTICES.md  BEST_PRACTICES.md  DAY2_3_COMPLETION.md  DAY6_COMPLETION.md  DAY7_COMPLETION.md  EXAMPLES.ja.md  EXAMPLES.md  FINAL_LAUNCH_CHECKLIST.md  MIGRATION_v0.4.3.md  PROJECT_REVIEW_v0.7.0.md  QUICKSTART.ja.md  QUICKSTART.md  QUICKSTART_TOKEN_OPTIMIZATION.md  ROADMAP.md  SUBAGENT_UPDATE_GUIDE.md  TOKEN_OPTIMIZATION_GUIDE.md  TROUBLESHOOTING.ja.md  TROUBLESHOOTING.md  UPDATE_WORKFLOW_TEST.md  VERSION_MANAGEMENT.md  WEEK2_DAY11_COMPLETION.md  WEEK2_DAY15_COMPLETION.md  WEEK2_DAY16_COMPLETION.md  WEEK2_DAY17_COMPLETION.md  WEEK2_DAY8_10_COMPLETION.md  WEEK2_PROGRESS.md  WEEK3_PLAN.md  v1.0.0_FINAL_VERIFICATION.md  v1.0.0_IMPLEMENTATION_PLAN.md  v1.0.0_PROJECT_PLAN.md  v1.0.0_RELEASE_SUMMARY.md
docs/archive/: ALPHA_TESTING_GUIDE.md  DAY4_5_COMPLETION.md  LAUNCH_STEPS.md  WEEK2_PROGRESS.md  WEEK3_PLAN.md
docs/internal/: DISCUSSION.md  GITHUB_RELEASE_v0.7.0-beta.md  IMPLEMENTATION.md  README.md  RELEASE_NOTES_v0.5.0-beta.md  WEEK2_v0.6.0_COMPLETION.md  WEEK3_v0.6.0_COMPLETION.md  v0.6.0_PLAN.md  v0.7.0_PLAN.md  v0.7.0_WEEK1_COMPLETION.md  v0.7.0_WEEK1_KICKOFF.md
docs/internal/archive/: COOKBOOK_INTEGRATION.md  GITHUB_PLAN.md  GITHUB_RELEASE_v0.4.1-beta.md  GITHUB_RELEASE_v0.4.3-beta.md  PHASE3_DESIGN.md  REDDIT_POST_v0.4.1.md  RELEASE_NOTES_v0.4.2-beta.md  RELEASE_NOTES_v0.4.3-beta.md
docs/internal/completion/: v0.7.0_DAY1_COMPLETION.md  v0.7.0_DAY2_COMPLETION.md  v0.7.0_DAY3_4_COMPLETION.md  v0.7.0_DAY5_6_COMPLETION.md  v0.7.0_WEEK2_COMPLETION.md
docs/internal/design/: v0.7.0_CACHING_DESIGN.md  v0.7.0_DAY1_CACHE_ANALYSIS.md  v0.7.0_DAY3_4_OPTIMIZATION.md  v0.7.0_PERFORMANCE_TRACKING.md  v0.7.0_REVERT_DECISION.md  v0.7.0_SMART_INVALIDATION_DESIGN.md
docs/internal/planning/: v0.7.0_WEEK2_PLAN.md
docs/internal/releases/: RELEASE_NOTES_v0.6.0-beta.md  RELEASE_NOTES_v0.7.0-beta.md
examples/reports/: EXAMPLE_api-review-20251031-143022.md
scripts/: add_token_optimization.py  monitor_tokens.sh  update-version.sh
skills/: SKILL.md
skills/adaptive-review/: SKILL.md  detect_phase.py
skills/adaptive-review/phase_configs/: mvp.yaml  production.yaml  prototype.yaml
skills/project-analyzer/: analyze_project.py  detect_monorepo.py  detect_phase.py  detect_stack.py  detection_cache.py
templates/: _token_optimization_section.md
templates/common/: chrome-devtools-tester.md
templates/fastapi/: api-developer.md  api-tester.md  sqlalchemy-specialist.md
templates/flutter/: flutter-developer.md
templates/go/: go-developer.md
templates/ios-swift/: swift-developer.md
templates/nextjs/: tester.md
templates/python-ml/: cv-specialist.md  python-ml-developer.md
templates/vanilla-php-web/: mysql-specialist.md  php-developer.md  playwright-tester.md  vanilla-js-developer.md
tests/: README.md  conftest.py  test_analyze_project.py  test_cli.py  test_detection.py  test_detection_edge_cases.py  test_generation.py  test_integration.py  test_monorepo.py  test_performance.py  test_version_extraction.py
